# testCpp

./: .gitignore  CMakePresets.json
00_hello_world/: CMakeLists.txt  build.sh  main.cpp  run.sh
01_ValueAddressing/: CMakeLists.txt  ValueAddressing.h  build.sh  main.cpp
02_ValueAddressing_callback/: CMakeLists.txt  ValueAddressing.h  main.cpp  run.sh
